Initial commit: portfolio scaffold, theme, interactivity, and project links

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <h3>Anime Website</h3>
                 <p>A stylish anime-themed website showcasing responsive layouts and polished UI details.</p>
                 <div class="card__actions">
-                  <a class="btn btn--small" href="./ANIME%20WEBSITE/" aria-label="Open live demo for Anime Website">Live</a>
+                  <a class="btn btn--small" href="./anime-website/" aria-label="Open live demo for Anime Website">Live</a>
                   <a class="btn btn--small btn--ghost" href="#" aria-label="Open code for Anime Website">Code</a>
                 </div>
               </div>
@@ -114,7 +114,7 @@
                 <h3>Test Project</h3>
                 <p>Experiment playground highlighting components, interactions, and layout techniques.</p>
                 <div class="card__actions">
-                  <a class="btn btn--small" href="./TEST/test.html" aria-label="Open live demo for Test Project">Live</a>
+                  <a class="btn btn--small" href="./TEST/" aria-label="Open live demo for Test Project">Live</a>
                   <a class="btn btn--small btn--ghost" href="#" aria-label="Open code for Test Project">Code</a>
                 </div>
               </div>
